--- a/server/views/partials/body-js-core.pug
+++ b/server/views/partials/body-js-core.pug
@@ -2,4 +2,7 @@ script(src=`${assetsPath}js/core/jquery.min.js` type='text/javascript')
 script(src=`${assetsPath}js/core/popper.min.js` type='text/javascript')
 script(src=`${assetsPath}js/core/bootstrap.min.js` type='text/javascript')
 script(src=`${assetsPath}js/plugins/perfect-scrollbar.jquery.min.js` type='text/javascript')
-script(src=`${assetsPath}js/plugins/moment.min.js`)
+script(src=`${assetsPath}js/plugins/moment.min.js` type='text/javascript')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/ru.js' type='text/javascript')
+script.
+    moment.locale('ru')
