--- a/server/views/partials/body-js-core.pug
+++ b/server/views/partials/body-js-core.pug
@@ -1,4 +1,5 @@
 script(src=`${assetsPath}js/core/jquery.min.js` type='text/javascript')
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serializeJSON/2.9.0/jquery.serializejson.min.js" type='text/javascript')
 script(src=`${assetsPath}js/core/popper.min.js` type='text/javascript')
 script(src=`${assetsPath}js/core/bootstrap.min.js` type='text/javascript')
 script(src=`${assetsPath}js/plugins/perfect-scrollbar.jquery.min.js` type='text/javascript')
