--- a/server/views/manufacturing.pug
+++ b/server/views/manufacturing.pug
@@ -10,7 +10,7 @@ block headTitle
     title MRP by deksden (#{pageID})
 
 block bodyContent
-  +erpTable('Manufacturing plan', manufacturing)
+  +erpTable('Manufacturing plan', manufacturing, '/erp/manufacturing/')
     thead.text-primary
       tr.col-md-8
         th.text-left Ready date
@@ -26,13 +26,13 @@ block bodyContent
             a(href=`/erp/processes/${mfg.processId}`) #{mfg.processId}
           td.text-right #{ mfg.qnt }
           +formActions(`/erp/manufacturing/${ndx++}.json`)
-  // Modal
+  // Modal for editing record:
   #editModal.modal.fade(tabindex='-1' role='dialog' aria-labelledby='EditModal' aria-hidden='true')
     .modal-dialog(role='document')
       .modal-content
         form#editForm
             .modal-header
-              h5#exampleModalLabel.modal-title Edit record:
+              h5#editModalHeader.modal-title Edit record:
               button.close(type='button' data-dismiss='modal' aria-label='Close')
                 span(aria-hidden='true') &times;
             .modal-body
@@ -41,6 +41,19 @@ block bodyContent
             .modal-footer
               button.btn.btn-primary#btn-save(type='button') Save changes
               button.btn.btn-secondary(type='button' data-dismiss='modal') Close
+  // Modal for confirming remove record:
+  #confirmRemoveModal.modal.fade(tabindex='-1' role='dialog' aria-labelledby='ConfirmRemoveModal' aria-hidden='true')
+    .modal-dialog(role='document')
+        .modal-content
+            .modal-header
+                h5.modal-title Confirm removing record
+                button.close(type='button' data-dismiss='modal' aria-label='Close')
+                    span(aria-hidden='true') &times;
+            .modal-body
+                p Are you sure you want to remove this record?
+            .modal-footer
+                button.btn.btn-danger#btn-do-remove(type='button') Remove
+                button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
 
 block bodyJS
   script.
@@ -95,11 +108,13 @@ block bodyJS
     $('#btn-new').click(function() {
       $('#btn-save').data('url', $(this).data("url")) // url for saving form (new record)
 
+      $('#editModalHeader').text('Add new record')
+
       initModal($('.modal-body'), '', 0, '') // initial values
       initDatetimePickerPlugin()
     })
 
-    $('#btn-edit').click(function () {
+    $('.btn-erp-edit').click(function () {
       var url = $(this).data("url")
       $.ajax({
         url: url,
@@ -107,6 +122,7 @@ block bodyJS
         success: function (data) {
           // set URL for save buttton (editing exact record):
           $('#btn-save').data('url', url)
+          $('#editModalHeader').text('Edit record')
 
           initModal($('.modal-body'), data.date, data.qnt, data.processId)
           initDatetimePickerPlugin()
@@ -122,8 +138,6 @@ block bodyJS
       })
     })
 
-
-
     $('#btn-save').click(function() {
       var url=$(this).data("url")
       $(this).addClass('disabled').text('Saving changes ...')
@@ -134,15 +148,52 @@ block bodyJS
         type: 'POST',
         data: JSON.stringify($("#editForm").serializeJSON()),
         success: function(data) {
-          console.log('saved!')
           $(this).removeClass('disabled').text('Save changes')
           $('#editModal').modal('hide')
           location.reload()
         },
-        error: function() {
+        error: function (request, status, error) {
           $(this).removeClass('disabled').text('Changes not saved!')
+          $('.modal-body').html(
+            '<h3>Error loading form data from server</h3>' +
+            '<p> Request: ' + request.toString() + '</p>' +
+            '<p> Status: ' + status.toString() + '</p>' +
+            '<p> Error: ' + error.toString() + '</p>'
+          )
         }
       })
     })
+
+    $('.btn-erp-remove').click(function () {
+      console.log('remove show!')
+      $('#btn-do-remove').data('url', $(this).data("url")).removeClass('disabled') // url for performing actual removal
+      $('#confirmRemoveModal').modal('show')
+    })
+
+    $('#btn-do-remove').click(function () {
+      var url = $(this).data("url")
+      $(this).addClass('disabled').text('Removing ...')
+      $.ajax({
+        url: url,
+        type: 'DELETE',
+        success: function (data) {
+          $(this).removeClass('disabled').text('Remove')
+          $('#confirmRemoveModal').modal('hide')
+          location.reload()
+        },
+        error: function () {
+          $(this).removeClass('disabled').text('Removing failed!')
+          $('.modal-body').html(
+            '<h3>Error loading form data from server</h3>' +
+            '<p> Request: ' + request.toString() + '</p>' +
+            '<p> Status: ' + status.toString() + '</p>' +
+            '<p> Error: ' + error.toString() + '</p>'
+          )
+
+        }
+      })
+    })
+
+
 
 
