--- a/server/views/mixins/table.pug
+++ b/server/views/mixins/table.pug
@@ -1,4 +1,4 @@
-mixin erpTable(header, aList)
+mixin erpTable(header, aList, newURL)
     .content
         .row
             .col-md-12
@@ -6,9 +6,10 @@ mixin erpTable(header, aList)
                     if aList && aList.length > 0
                         .card-header
                             h3=header
-                            button.btn.btn-primary.btn-round#btn-new(data-url="/erp/manufacturing/" data-toggle='modal' data-target='#editModal')
-                                i.now-ui-icons.ui-1_simple-add
-                                span  New
+                            if newURL
+                                button.btn.btn-primary.btn-round#btn-new(data-url=newURL data-toggle='modal' data-target='#editModal')
+                                    i.now-ui-icons.ui-1_simple-add
+                                    span  New
                         .card-body
                             .table-responsive
                                 table.table
@@ -18,5 +19,12 @@ mixin erpTable(header, aList)
                         .card-header
                             h3=header
                             h6.card-subtitle.text-muted.mb-2 List is empty
+
+                            if newURL
+                                p Add new item:
+                                button.btn.btn-primary.btn-round#btn-new(data-url=newURL data-toggle='modal' data-target='#editModal')
+                                    i.now-ui-icons.ui-1_simple-add
+                                    span  New
+                                p or you can return to main page
                         .card-body
                             a.btn.btn-primary.btn-round(href='/') < Main page
