--- a/server/views/layouts/main-layout.pug
+++ b/server/views/layouts/main-layout.pug
@@ -46,7 +46,8 @@ body
         // Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard
         script(src=`${assetsPath}js/plugins/jquery.bootstrap-wizard.js`)
         // Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select
-        script(src=`${assetsPath}js/plugins/bootstrap-selectpicker.js` type='text/javascript')
+        script(src=`${assetsPath}js/plugins/bootstrap-select.js` type='text/javascript')
+        script(src=`${assetsPath}js/plugins/i18n/defaults-*.min.js` type='text/javascript')
         // Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/
         script(src=`${assetsPath}js/plugins/bootstrap-switch.js`)
         // Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/
